samples/_failures_safe/1761267053_7f9ed8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42a980a9.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_42a980a9.c:137:12: error: missing terminating " character
  137 |     printf("\nHigh Severity Entries
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_42a980a9.c:137:5: error: expected expression at end of input
  137 |     printf("\nHigh Severity Entries
      |     ^~~~~~
./samples/SAFE/__tmp_42a980a9.c:137:5: error: expected declaration or statement at end of input
